# AGV_PBOT

src/agv_project/: package.xml  setup.cfg  setup.py
src/agv_project/agv_project/: goal_sender_node.py
src/agv_project/config/: nav2_params.yaml  slam_params.yaml
src/agv_project/launch/: navigation.launch.py  robot_simulation.launch.py  slam.launch.py
src/agv_project/maps/: warehouse.yaml
src/agv_project/worlds/: warehouse.sdf
